k8s/04-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: myblogacr98756jibin.azurecr.io/frontend:latest
        imagePullPolicy: Always  # <-- THIS IS THE FIX
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP # This is correct
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
